# ray_tracer

./: Bitmap.cpp  Bitmap.h  CMakeLists.txt  README.md  geometry.h  main.cpp  main.h
